--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,15 @@
 asgiref==3.11.1
+certifi==2026.1.4
+charset-normalizer==3.4.4
 Django==5.2.11
+django-cors-headers==4.3.1
 djangorestframework==3.16.1
+djangorestframework-simplejwt==5.3.1
+idna==3.11
 pillow==12.1.0
 psycopg2-binary==2.9.11
+PyJWT==2.8.0
 python-dotenv==1.2.1
+requests==2.32.5
 sqlparse==0.5.5
+urllib3==2.6.3
